<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:paddingTop="@dimen/_10sdp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_130sdp"
                android:contentDescription="@string/logo"
                android:scaleType="centerInside"
                android:src="@drawable/ecg_icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/cpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                android:hint="@string/cpf"
                android:inputType="text"
                android:text="123">

            </EditText>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:text="123" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/styled_edittext"
                android:text="@string/entrar"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_16sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="bottom"
                android:text="@string/possuiconta"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_12sdp" />

            <Button
                android:id="@+id/CadastrarButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/colorPrimary"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:text="@string/cadastrese"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_16sdp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>

